# webservers

./: .gitignore  Makefile  README.md  kill_server.sh  view_log.js
elixir_phoenix_server/: Makefile  example.env  mix.exs
elixir_phoenix_server/config/: config.exs  prod.exs  runtime.exs  test.exs
elixir_phoenix_server/lib/: elixir_server_web.ex
elixir_phoenix_server/lib/elixir_server/: application.ex
elixir_phoenix_server/lib/elixir_server_web/: endpoint.ex  router.ex
elixir_phoenix_server/lib/elixir_server_web/components/: layouts.ex
elixir_phoenix_server/lib/elixir_server_web/views/: error_helpers.ex  page_view.ex
elixir_server/: Makefile  mix.exs
elixir_server/config/: dev.exs  runtime.exs
elixir_server/lib/elixir_server/: application.ex
elixir_server/lib/elixir_server_web/: endpoint.ex  router.ex
elixir_server/lib/elixir_server_web/controllers/: api_controller.ex
go_gin_server/: Makefile  go.mod  main.go
node_express_server/: index.js  package-lock.json  package.json
node_fastify_server/: Makefile  index.js  package-lock.json  package.json
node_hono_server/: Makefile  bun.lockb  package-lock.json  package.json
node_hono_server/src/: index.js
node_koa_server/: index.js  package-lock.json  package.json
python_flask_server/: Makefile  index.py  start.sh
rust_actix_server/: Cargo.toml  Makefile
rust_actix_server/src/: main.rs
rust_axum_server/: Cargo.toml  Makefile
rust_axum_server/src/: main.rs
rust_warp_server/: Cargo.toml  Makefile
rust_warp_server/src/: main.rs
testing/: load-test.js
(+4 files in other folders)
