[package]
name = "rust_actix_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
serde = { version = "1.0.182", features = ["derive"] }

[profile.release]
strip = true
opt-level = "s"
lto = true
debug = false
codegen-units = 1
