[package]
name = "rust_axum_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
serde = { "version" = "1.0.200", "features" = ["derive"] }
tokio = { "version" = "1.37.0", "features" = ["rt-multi-thread"] }
tracing-subscriber = "0.3.18"

[profile.release]
strip = true
opt-level = "s"
lto = true
debug = false
codegen-units = 1
