[package]
name = "rust_warp"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.122"
tokio = { version = "1.39.2", features = ["full"] }
tokio-macros = "2.4.0"
warp = "0.3.7"

[profile.release]
strip = true
opt-level = "s"
lto = true
debug = false
codegen-units = 1
